# fetalReconstruction

./: .gitignore  .gitmodules  BUILD_README  HOWTORUN.txt  KD_SESA_BUILD_README.txt  README.md  small.sh
contrib/: large.sh  small.sh  test.py
docker/: Dockerfile
source/: CMakeLists.txt  CMakeLists_CPU.cmake  CMakeLists_GPU.cmake
source/IRTKSimple2/: CMakeLists.txt
source/IRTKSimple2/config/: IRTKInclude.cmake
source/IRTKSimple2/geometry++/include/: irtkMatrix.h
source/IRTKSimple2/geometry++/src/: irtkMatrix.cc
source/IRTKSimple2/image++/include/: irtkConvolution_1D.h  irtkGenericImage.h  irtkImageAttributes.h
source/IRTKSimple2/image++/src/: .irtkNearestNeighborInterpolateImageFunction.cc.swp  irtkGenericImage.cc
source/reconstructionGPU2/: CMakeLists.txt  EbbCrossCorrelationSimilarityMetric.h  EbbGaussianBlurringWithPadding.cc  EbbGaussianBlurringWithPadding.h  EbbGradientDescentOptimizer.cc  EbbGradientDescentOptimizer.h  EbbImageRigidRegistrationWithPadding.cc  EbbImageRigidRegistrationWithPadding.h  EbbResamplingWithPadding.cc  EbbResamplingWithPadding.h  EbbScalarGaussian.cc  EbbScalarGaussian.h  GPUWorker.h  irtkReconstructionGPU.cc  irtkReconstructionGPU.h  recon_volumeHelper.h  reconstruction.cc  reconstruction_cuda2.h  utils.h
